--- a/src/style/partials/main.scss
+++ b/src/style/partials/main.scss
@@ -498,6 +498,7 @@ section {
 					padding: (md:  0 vw2(20)),
 					letter-spacing: (md:  vw2(0.93)),
 					font-size: (md:  vw2(38)),
+					border-width: (md:  1px),
 	));
 
 	+.form-input {
